src/main/java/com/flipperplz/dayzdev/language/enforce/parser/EnforceParser.java
// This is a generated file. Not intended for manual editing.
package com.flipperplz.dayzdev.language.enforce.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.flipperplz.dayzdev.language.enforce.psi.EnforceElementTypes.*;
import static com.flipperplz.dayzdev.language.enforce.parser.EnforceParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class EnforceParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARITHMETIC_EXPRESSION, ARRAY_INDEX_EXPRESSION, ASSIGNMENT_EXPRESSION, CAST_EXPRESSION,
      EXPRESSION, LITERAL_ARRAY, LITERAL_BOOLEAN, LITERAL_FLOAT,
      LITERAL_INTEGER, LITERAL_NULL, LITERAL_STRING, LOGICAL_EXPRESSION,
      OBJECT_CREATION_EXPRESSION, PARENTHESISED_EXPRESSION, PRIMARY_EXPRESSION, RELATIVE_EXPRESSION,
      SUPER_EXPRESSION, THIS_EXPRESSION, UNARY_PREFIX_EXPRESSION, UNARY_SUFFIX_EXPRESSION),
  };

  /* ********************************************************** */
  // OP_MULTIPLY | OP_DIVIDE | OP_MODULO | OP_ADD | OP_SUBTRACT | OP_LSHIFT | OP_RSHIFT | OP_BITWISE_OR | OP_BITWISE_AND | OP_BITWISE_NOT | OP_BITWISE_XOR
  public static boolean ArithmeticOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArithmeticOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARITHMETIC_OPERATOR, "<arithmetic operator>");
    r = consumeToken(b, OP_MULTIPLY);
    if (!r) r = consumeToken(b, OP_DIVIDE);
    if (!r) r = consumeToken(b, OP_MODULO);
    if (!r) r = consumeToken(b, OP_ADD);
    if (!r) r = consumeToken(b, OP_SUBTRACT);
    if (!r) r = consumeToken(b, OP_LSHIFT);
    if (!r) r = consumeToken(b, OP_RSHIFT);
    if (!r) r = consumeToken(b, OP_BITWISE_OR);
    if (!r) r = consumeToken(b, OP_BITWISE_AND);
    if (!r) r = consumeToken(b, OP_BITWISE_NOT);
    if (!r) r = consumeToken(b, OP_BITWISE_XOR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '[' Expression? ']'
  public static boolean ArrayIndex(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayIndex")) return false;
    if (!nextTokenIs(b, LSBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LSBRACKET);
    r = r && ArrayIndex_1(b, l + 1);
    r = r && consumeToken(b, RSBRACKET);
    exit_section_(b, m, ARRAY_INDEX, r);
    return r;
  }

  // Expression?
  private static boolean ArrayIndex_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayIndex_1")) return false;
    Expression(b, l + 1, -1);
    return true;
  }

  /* ********************************************************** */
  // OP_ASSIGN | OP_ADD_ASSIGN | OP_SUBTRACT_ASSIGN | OP_MULTIPLY_ASSIGN | OP_DIVIDE_ASSIGN | OP_OR_ASSIGN | OP_AND_ASSIGN | OP_LSHIFT_ASSIGN | OP_RSHIFT_ASSIGN
  public static boolean AssignmentOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignmentOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_OPERATOR, "<assignment operator>");
    r = consumeToken(b, OP_ASSIGN);
    if (!r) r = consumeToken(b, OP_ADD_ASSIGN);
    if (!r) r = consumeToken(b, OP_SUBTRACT_ASSIGN);
    if (!r) r = consumeToken(b, OP_MULTIPLY_ASSIGN);
    if (!r) r = consumeToken(b, OP_DIVIDE_ASSIGN);
    if (!r) r = consumeToken(b, OP_OR_ASSIGN);
    if (!r) r = consumeToken(b, OP_AND_ASSIGN);
    if (!r) r = consumeToken(b, OP_LSHIFT_ASSIGN);
    if (!r) r = consumeToken(b, OP_RSHIFT_ASSIGN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '[' FunctionCall ']'
  public static boolean Attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Attribute")) return false;
    if (!nextTokenIs(b, LSBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LSBRACKET);
    r = r && FunctionCall(b, l + 1);
    r = r && consumeToken(b, RSBRACKET);
    exit_section_(b, m, ATTRIBUTE, r);
    return r;
  }

  /* ********************************************************** */
  // ('{' Statement* '}') ';'?
  public static boolean BlockStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStatement")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BlockStatement_0(b, l + 1);
    r = r && BlockStatement_1(b, l + 1);
    exit_section_(b, m, BLOCK_STATEMENT, r);
    return r;
  }

  // '{' Statement* '}'
  private static boolean BlockStatement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStatement_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURLY);
    r = r && BlockStatement_0_1(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, m, null, r);
    return r;
  }

  // Statement*
  private static boolean BlockStatement_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStatement_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BlockStatement_0_1", c)) break;
    }
    return true;
  }

  // ';'?
  private static boolean BlockStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BlockStatement_1")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  /* ********************************************************** */
  // break ';'
  public static boolean BreakStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BreakStatement")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BREAK, SEMICOLON);
    exit_section_(b, m, BREAK_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // Attribute? ClassModifier* class Classname TypeDeclarationList? ClassExtension? VarAndFunctionBlock SEMICOLON?
  public static boolean ClassDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_DECLARATION, "<class declaration>");
    r = ClassDeclaration_0(b, l + 1);
    r = r && ClassDeclaration_1(b, l + 1);
    r = r && consumeToken(b, CLASS);
    r = r && Classname(b, l + 1);
    r = r && ClassDeclaration_4(b, l + 1);
    r = r && ClassDeclaration_5(b, l + 1);
    r = r && VarAndFunctionBlock(b, l + 1);
    r = r && ClassDeclaration_7(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Attribute?
  private static boolean ClassDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassDeclaration_0")) return false;
    Attribute(b, l + 1);
    return true;
  }

  // ClassModifier*
  private static boolean ClassDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassDeclaration_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ClassModifier(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ClassDeclaration_1", c)) break;
    }
    return true;
  }

  // TypeDeclarationList?
  private static boolean ClassDeclaration_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassDeclaration_4")) return false;
    TypeDeclarationList(b, l + 1);
    return true;
  }

  // ClassExtension?
  private static boolean ClassDeclaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassDeclaration_5")) return false;
    ClassExtension(b, l + 1);
    return true;
  }

  // SEMICOLON?
  private static boolean ClassDeclaration_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassDeclaration_7")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  /* ********************************************************** */
  // (extends | ':') ClassReference
  public static boolean ClassExtension(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassExtension")) return false;
    if (!nextTokenIs(b, "<class extension>", COLON, EXTENDS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_EXTENSION, "<class extension>");
    r = ClassExtension_0(b, l + 1);
    r = r && ClassReference(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // extends | ':'
  private static boolean ClassExtension_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassExtension_0")) return false;
    boolean r;
    r = consumeToken(b, EXTENDS);
    if (!r) r = consumeToken(b, COLON);
    return r;
  }

  /* ********************************************************** */
  // modded | sealed
  public static boolean ClassModifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassModifier")) return false;
    if (!nextTokenIs(b, "<class modifier>", MODDED, SEALED)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASS_MODIFIER, "<class modifier>");
    r = consumeToken(b, MODDED);
    if (!r) r = consumeToken(b, SEALED);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Classname TypeList?
  public static boolean ClassReference(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassReference")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Classname(b, l + 1);
    r = r && ClassReference_1(b, l + 1);
    exit_section_(b, m, CLASS_REFERENCE, r);
    return r;
  }

  // TypeList?
  private static boolean ClassReference_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassReference_1")) return false;
    TypeList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean Classname(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Classname")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CLASSNAME, r);
    return r;
  }

  /* ********************************************************** */
  // <<p>> (',' <<p>>)*
  static boolean CommaSeperatedList(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "CommaSeperatedList")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _p.parse(b, l);
    r = r && CommaSeperatedList_1(b, l + 1, _p);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' <<p>>)*
  private static boolean CommaSeperatedList_1(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "CommaSeperatedList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CommaSeperatedList_1_0(b, l + 1, _p)) break;
      if (!empty_element_parsed_guard_(b, "CommaSeperatedList_1", c)) break;
    }
    return true;
  }

  // ',' <<p>>
  private static boolean CommaSeperatedList_1_0(PsiBuilder b, int l, Parser _p) {
    if (!recursion_guard_(b, l, "CommaSeperatedList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && _p.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // OP_INEQUAL | OP_EQUAL | OP_LESS_EQUAL | OP_GREATER_EQUAL | OP_LESS | OP_GREATER
  public static boolean ComparativeOperator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ComparativeOperator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARATIVE_OPERATOR, "<comparative operator>");
    r = consumeToken(b, OP_INEQUAL);
    if (!r) r = consumeToken(b, OP_EQUAL);
    if (!r) r = consumeToken(b, OP_LESS_EQUAL);
    if (!r) r = consumeToken(b, OP_GREATER_EQUAL);
    if (!r) r = consumeToken(b, OP_LESS);
    if (!r) r = consumeToken(b, OP_GREATER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // continue ';'
  public static boolean ContinueStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStatement")) return false;
    if (!nextTokenIs(b, CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CONTINUE, SEMICOLON);
    exit_section_(b, m, CONTINUE_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // 'default' ':' Statement*
  public static boolean DefaultSwitchLabel(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultSwitchLabel")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFAULT_SWITCH_LABEL, "<default switch label>");
    r = consumeToken(b, "default");
    r = r && consumeToken(b, COLON);
    r = r && DefaultSwitchLabel_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Statement*
  private static boolean DefaultSwitchLabel_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultSwitchLabel_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DefaultSwitchLabel_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // delete Expression ';'
  public static boolean DeleteStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DeleteStatement")) return false;
    if (!nextTokenIs(b, DELETE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DELETE);
    r = r && Expression(b, l + 1, -1);
    r = r && consumeToken(b, SEMICOLON);
    exit_section_(b, m, DELETE_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // else Statement
  public static boolean ElseStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseStatement")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE);
    r = r && Statement(b, l + 1);
    exit_section_(b, m, ELSE_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // Attribute? ClassModifier* enum Classname ClassExtension? '{' <<CommaSeperatedList EnumValue>>? '}' ';'?
  public static boolean EnumDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDeclaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DECLARATION, "<enum declaration>");
    r = EnumDeclaration_0(b, l + 1);
    r = r && EnumDeclaration_1(b, l + 1);
    r = r && consumeToken(b, ENUM);
    r = r && Classname(b, l + 1);
    r = r && EnumDeclaration_4(b, l + 1);
    r = r && consumeToken(b, LCURLY);
    r = r && EnumDeclaration_6(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    r = r && EnumDeclaration_8(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Attribute?
  private static boolean EnumDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDeclaration_0")) return false;
    Attribute(b, l + 1);
    return true;
  }

  // ClassModifier*
  private static boolean EnumDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDeclaration_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ClassModifier(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumDeclaration_1", c)) break;
    }
    return true;
  }

  // ClassExtension?
  private static boolean EnumDeclaration_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDeclaration_4")) return false;
    ClassExtension(b, l + 1);
    return true;
  }

  // <<CommaSeperatedList EnumValue>>?
  private static boolean EnumDeclaration_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDeclaration_6")) return false;
    CommaSeperatedList(b, l + 1, EnforceParser::EnumValue);
    return true;
  }

  // ';'?
  private static boolean EnumDeclaration_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumDeclaration_8")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  /* ********************************************************** */
  // VariableName (OP_ASSIGN Expression)?
  public static boolean EnumValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumValue")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VariableName(b, l + 1);
    r = r && EnumValue_1(b, l + 1);
    exit_section_(b, m, ENUM_VALUE, r);
    return r;
  }

  // (OP_ASSIGN Expression)?
  private static boolean EnumValue_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumValue_1")) return false;
    EnumValue_1_0(b, l + 1);
    return true;
  }

  // OP_ASSIGN Expression
  private static boolean EnumValue_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumValue_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_ASSIGN);
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (GlobalDeclaration | TypeDeclaration)*
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    while (true) {
      int c = current_position_(b);
      if (!File_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File", c)) break;
    }
    return true;
  }

  // GlobalDeclaration | TypeDeclaration
  private static boolean File_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File_0")) return false;
    boolean r;
    r = GlobalDeclaration(b, l + 1);
    if (!r) r = TypeDeclaration(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '(' Statement ';'? Expression ';'? Expression? ')'
  public static boolean ForControl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForControl")) return false;
    if (!nextTokenIs(b, LPARENTHESIS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPARENTHESIS);
    r = r && Statement(b, l + 1);
    r = r && ForControl_2(b, l + 1);
    r = r && Expression(b, l + 1, -1);
    r = r && ForControl_4(b, l + 1);
    r = r && ForControl_5(b, l + 1);
    r = r && consumeToken(b, RPARENTHESIS);
    exit_section_(b, m, FOR_CONTROL, r);
    return r;
  }

  // ';'?
  private static boolean ForControl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForControl_2")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  // ';'?
  private static boolean ForControl_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForControl_4")) return false;
    consumeToken(b, SEMICOLON);
    return true;
  }

  // Expression?
  private static boolean ForControl_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForControl_5")) return false;
    Expression(b, l + 1, -1);
    return true;
  }

  /* ********************************************************** */
  // foreach '(' <<CommaSeperatedList ForEachVariable>> ':' Expression ')' Statement
  public static boolean ForEachStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForEachStatement")) return false;
    if (!nextTokenIs(b, FOREACH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FOREACH, LPARENTHESIS);
    r = r && CommaSeperatedList(b, l + 1, EnforceParser::ForEachVariable);
    r = r && consumeToken(b, COLON);
    r = r && Expression(b, l + 1, -1);
    r = r && consumeToken(b, RPARENTHESIS);
    r = r && Statement(b, l + 1);
    exit_section_(b, m, FOR_EACH_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // VariableModifier* ClassReference VariableName
  public static boolean ForEachVariable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForEachVariable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR_EACH_VARIABLE, "<for each variable>");
    r = ForEachVariable_0(b, l + 1);
    r = r && ClassReference(b, l + 1);
    r = r && VariableName(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
